# reversi

./: AGENTS.md  README.md  package-lock.json  package.json
.agents/skills/git-commit/: SKILL.md
.github/: dependabot.yaml
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  nodejs.yml  rust.yml  test.yml
docs/: 1.bootstrap.js  bootstrap.js  index.js
engine/: Cargo.toml
engine/benches/: board_bench.rs
engine/src/: README.md  board.rs  game.rs  ggf.rs  lib.rs  main.rs  parameters.rs  search_algorithm.rs  strategy.rs  utils.rs
engine/src/board/: bitboard.rs  board_reverse.rs
engine/src/search_algorithm/: alphabeta.rs  base.rs
engine/tests/: board.rs
frontend/: .gitattributes  bootstrap.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: draw.js  draw.ts  env.d.ts  index.js  main.js  main.ts  reversi.ts  style.css
javascript/: .gitignore  bootstrap.js  index.html  index.js  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
javascript/src/: draw.js  draw.ts  index.js  index.ts  reversi.js  utils.js
python/: learn.py
reversi-js/: index.html  index.js  package-lock.json  package.json  webpack.config.js
reversi-wasm/: Cargo.toml  LICENSE  README.md
reversi-wasm/src/: board.rs  board_js.rs  lib.rs  reversi.rs
rust/: .gitignore  Cargo.toml
rust/src/: README.md  bitboard.rs  board.rs  board_reverse.rs  game.rs  game_tree.rs  ggf.rs  ggf_parser.rs  lib.rs  main.rs  player.rs  strategy.rs  utils.rs
rust/src/board/: bitboard.rs  board_reverse.rs  mod.rs  player.rs
rust/src/search_algorithm/: alphabeta.rs  base.rs  minmax.rs  mod.rs
rust/tests/: board.rs  board_reverse.rs
www/: index.html  index.js
