[package]
name = "reversi"
version = "0.1.0"
edition = "2021"
description = "A core package for computer reversi"
authors = ["Takamasa Oshikiri <mail@oshikiri.org>"]
repository = "https://github.com/oshikiri/reversi"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
lazy_static = "1.5.0"
wasm-bindgen = "0.2.105"
js-sys = "0.3.82"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
criterion = "0.7.0"

[dependencies.web-sys]
version = "0.3.82"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "board_bench"
harness = false
