[package]
name = "reversi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "A core package for computer reversi"
authors = ["Takamasa Oshikiri <mail@oshikiri.org>"]
repository = "https://github.com/oshikiri/reversi"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
criterion = "0.8.2"

[dependencies.web-sys]
version = "0.3.85"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bench]]
name = "board_bench"
harness = false
