[package]
name = "reversi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "A core package for computer reversi"
repository = "https://github.com/oshikiri/reversi"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug-panic-hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
criterion = "0.8.2"

[dependencies.web-sys]
version = "0.3.85"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "board_bench"
harness = false
